--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <a class="btn primary" href="#projects">💼 View Projects</a>
             <a class="btn" href="#" onclick="alert('soninirbhay74@gmail.com')">✉️Email Me</a>
 
-            <a class="btn" href="#" download>⬇️ Download Resume</a>
+            <a class="btn" href="resume.pdf" download>⬇️ Download Resume</a>
           </div>
         </div>
         <div class="photo card">
@@ -177,7 +177,6 @@
       <div class="card about">
         <div class="section-title">
           <h2>About Me</h2>
-          <a class="btn" href="https://github.com/Nirbhay7010/Soni-nirbhay.git" target="_blank" rel="noreferrer">GitHub ↗</a>
         </div>
         <p>
           I'm a data scientist based in India. My sweet spot is the intersection of <strong>machine learning</strong>, <strong>analytics</strong>, and <strong>product thinking</strong>—from exploratory analysis to model deployment.
@@ -193,11 +192,10 @@
           <span class="chip">TensorFlow</span>
           <span class="chip">PyTorch</span>
           <span class="chip">Feature Engineering</span>
-          <span class="chip">Tableau</span>
           <span class="chip">Power BI</span>
           <span class="chip">Git</span>
           <span class="chip">MySQL</span>
-          <span class="chip">PostgreSQL</span>
+          <span class="chip">Rect js</span>
           <span class="chip">Java</span>
           <span class="chip">c#</span>
           <span class="chip">c++</span>
@@ -214,39 +212,39 @@
       <div class="grid projects">
         <article class="card project">
           <div>
-            <h3>Customer Churn Prediction</h3>
-            <p class="meta">Python, scikit‑learn, XGBoost · 89% accuracy</p>
-            <p>Engineered features from transactional and support data; trained gradient boosting models; built SHAP explanations; shipped a weekly scoring job.</p>
-          </div>
+            <h3>AI-powered language translation</h3>
+            <p class="meta">React js, OpenAi Integration</p>
+            <p>Built an AI-powered language translation tool using React and OpenAI API for real-time, context-aware multilingual translations. Designed an interactive UI for seamless user experience and scalability.</p>
+          </div><!--
           <div class="links">
             <a class="btn" href="#" target="_blank">Code</a>
             <a class="btn" href="#" target="_blank">Demo</a>
             <a class="btn" href="#" target="_blank">Report</a>
-          </div>
+          </div>-->
         </article>
 
         <article class="card project">
           <div>
-            <h3>Sales Forecasting (Time Series)</h3>
-            <p class="meta">Prophet, ARIMA, Python · MAPE ↓ 18%</p>
-            <p>Developed store‑level forecasts; implemented cross‑store holiday effects; automated model retraining and dashboard refresh in Airflow.</p>
-          </div>
+            <h3>AI-Based Fake News Authantication tool</h3>
+            <p class="meta"> Python, Flask · Accuracy 97%</p>
+            <p>Developed an AI-based Fake News Authentication tool using NLP and machine learning to detect and classify misinformation with high accuracy. Integrated a user-friendly interface for real-time news verification..</p>
+          </div><!--
           <div class="links">
             <a class="btn" href="#" target="_blank">Code</a>
             <a class="btn" href="#" target="_blank">Dashboard</a>
-          </div>
+          </div>-->
         </article>
 
         <article class="card project">
           <div>
-            <h3>Twitter Sentiment Analyzer</h3>
+            <h3>AI-Based Music Recommedation System.</h3>
             <p class="meta">NLP, Flask, Docker</p>
-            <p>Scraped 50k tweets; trained BERT‑based classifier; deployed a lightweight Flask app with Docker; added real‑time trend monitoring.</p>
+            <p>Built an AI-based Music Recommendation System using machine learning to analyze user preferences and listening patterns. Delivered personalized song suggestions in real-time with improved accuracy and user engagement..</p>
           </div>
-          <div class="links">
+          <div class="links"><!--
             <a class="btn" href="#" target="_blank">Code</a>
             <a class="btn" href="#" target="_blank">Live App</a>
-          </div>
+          </div>-->
         </article>
       </div>
     </section>
@@ -264,9 +262,7 @@
         <div class="card" style="padding:16px;">
           <h3 style="margin:0 0 6px;">Certifications</h3>
           <ul style="margin:0; padding-left:18px;">
-            <li>IBM Data Science Professional Certificate</li>
-            <li>Machine Learning — Andrew Ng (Coursera)</li>
-            <li>Tableau Desktop Specialist</li>
+            <li>edunet Machine Learning & Artifical intelligence </li>
           </ul>
         </div>
       </div>
@@ -279,7 +275,7 @@
         <div class="row">
           <div>
             <label for="name">Name</label>
-            <input id="name" type="text" placeholder="Your name" value="Soni Nirbhay"/>
+            <input id="name" type="text" placeholder="Your name" value=""/>
           </div>
           <div>
             <label for="email">Email</label>
@@ -291,7 +287,7 @@
           <textarea id="msg" placeholder="Hello Soni, I'd like to discuss..." ></textarea>
         </div>
         <button class="btn primary" onclick="alert('This is a static demo form. Hook it to a service like Formspree or a backend to receive messages.')">Send Message</button>
-        <div style="font-size:13px; color:var(--muted);">Or reach me directly: <a href="mailto:your.email@example.com" style="color:inherit;">soninirbhay74@gmail.com</a> · <a href="https://github.com/Nirbhay7010/Soni-nirbhay.git" target="_blank" rel="noreferrer" style="color:inherit;">GitHub</a> · <a href="https://www.linkedin.com/in/soni-nirbhay" target="_blank" rel="noreferrer" style="color:inherit;">LinkedIn</a></div>
+        <div style="font-size:13px; color:var(--muted);">Or reach me directly: <a href="mailto:your.email@example.com" style="color:inherit;">soninirbhay74@gmail.com</a> · <a href="https://www.linkedin.com/in/soni-nirbhay" target="_blank" rel="noreferrer" style="color:inherit;">LinkedIn</a></div>
       </div>
     </section>
 
@@ -299,7 +295,6 @@
       <div style="display:flex; align-items:center; justify-content:space-between; gap:12px;">
         <div>© <span id="year"></span> Soni Nirbhay. All rights reserved.</div>
         <div class="social">
-          <a href="https://github.com/Nirbhay7010/Soni-nirbhay.git" target="_blank" rel="noreferrer">GitHub</a>
           <a href="https://www.linkedin.com/in/soni-nirbhay" target="_blank" rel="noreferrer">LinkedIn</a>
           <a href="mailto:soninirbhay74@gmail.com">Email</a>
         </div>
