--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div>
         <div>
           <label for="msg">Message</label>
-          <textarea id="msg" placeholder="Hello Soni, I'd like to discuss..." ></textarea>
+          <textarea id="msg" placeholder="Hello , like to discuss..." ></textarea>
         </div>
         <button class="btn primary" onclick="alert('This is a static demo form. Hook it to a service like Formspree or a backend to receive messages.')">Send Message</button>
         <div style="font-size:13px; color:var(--muted);">Or reach me directly: <a href="mailto:your.email@example.com" style="color:inherit;">soninirbhay74@gmail.com</a> · <a href="https://www.linkedin.com/in/soni-nirbhay" target="_blank" rel="noreferrer" style="color:inherit;">LinkedIn</a></div>
@@ -318,3 +318,4 @@
   </script>
 </body>
 </html>
+
